Init project minimal functionality: build and start project

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,13 @@
 plugins {
-    id 'java'
+    id 'application'
 }
 
 group = 'hexlet.code'
 version = '1.0-SNAPSHOT'
+
+application {
+    mainClass = 'hexlet.code.App'
+}
 
 repositories {
     mavenCentral()
@@ -12,6 +16,10 @@ repositories {
 dependencies {
     testImplementation platform('org.junit:junit-bom:5.9.2')
     testImplementation 'org.junit.jupiter:junit-jupiter:5.9.2'
+}
+
+compileJava {
+    options.release = 17
 }
 
 test {
