--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,7 @@ repositories {
 dependencies {
     testImplementation platform('org.junit:junit-bom:5.9.2')
     testImplementation 'org.junit.jupiter:junit-jupiter:5.9.2'
+    implementation 'info.picocli:picocli:4.7.3'
 }
 
 compileJava {
