Added first functionality to compare two flat json files and file examples for test

--- a/app/Makefile
+++ b/app/Makefile
@@ -4,6 +4,9 @@ run:
 run-dist: build
 	./build/install/app/bin/app
 
+build-run-test: clear build
+	./build/install/app/bin/app file_1.json file_2.json
+
 build: clear
 	./gradlew installDist
 	
