--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,6 +11,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - name: Setup Java 17
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v3
         with:
