--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,11 +20,11 @@ jobs:
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
 
-      - name: Check current folder
-        run: ls -la
+      - name: Checkout to app folder
+        run: cd app/
 
       - name: Execute Gradle build
-        run: ./app/gradlew build
+        run: ./gradlew build
 
       - name: Test & publish code coverage
         uses: paambaati/codeclimate-action@v4.0.0
