--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,9 +19,11 @@ jobs:
 
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
-
-      - name: Execute Gradle build
-        run: cd app/ && ./gradlew build
+        with:
+          arguments: build
+          build-root-directory: app
+      - #name: Execute Gradle build
+        #run: cd app/ && ./gradlew build
 
       - name: Test & publish code coverage
         uses: paambaati/codeclimate-action@v4.0.0
