Step 7: added feature for compare flat yaml files

--- a/app/Makefile
+++ b/app/Makefile
@@ -4,9 +4,6 @@ run:
 run-dist: build
 	./build/install/app/bin/app
 
-build-run-test: clear build
-	./build/install/app/bin/app file_1.json file_2.json
-
 build: clear
 	./gradlew installDist
 	
@@ -15,6 +12,11 @@ clear:
 
 test:
 	./gradlew test
+
+test-json: clear build
+	./build/install/app/bin/app src/test/resources/file_1.json src/test/resources/file_2.json
+test-yaml: clear build
+	./build/install/app/bin/app src/test/resources/file_1.yml src/test/resources/file_2.yml
 
 check:
 	./gradlew check
