--- a/app/Makefile
+++ b/app/Makefile
@@ -14,9 +14,9 @@ test:
 	./gradlew test
 
 test-json: clear build
-	./build/install/app/bin/app src/test/resources/file_1.json src/test/resources/file_2.json
+	./build/install/app/bin/app -f stylish src/test/resources/file_1.json src/test/resources/file_2.json
 test-yaml: clear build
-	./build/install/app/bin/app src/test/resources/file_1.yml src/test/resources/file_2.yml
+	./build/install/app/bin/app -f plain src/test/resources/file_1.yml src/test/resources/file_2.yml
 
 check:
 	./gradlew check
