--- a/app/Makefile
+++ b/app/Makefile
@@ -14,7 +14,7 @@ test:
 	./gradlew test
 
 test-json: clear build
-	./build/install/app/bin/app -f stylish src/test/resources/file_1.json src/test/resources/file_2.json
+	./build/install/app/bin/app -f json src/test/resources/file_1.json src/test/resources/file_2.json
 test-yaml: clear build
 	./build/install/app/bin/app -f plain src/test/resources/file_1.yml src/test/resources/file_2.yml
 
@@ -23,5 +23,8 @@ check:
 
 tasks:
 	./gradlew tasks
+
+setup:
+	./gradlew wrapper --gradle-version 7.4.2
 
 .PHONY: build
