review #1: test commit for check gitlab actions

--- a/app/Makefile
+++ b/app/Makefile
@@ -16,7 +16,7 @@ test:
 test-json: clear build
 	./build/install/app/bin/app -f json src/test/resources/file_1.json src/test/resources/file_2.json
 test-yaml: clear build
-	./build/install/app/bin/app -f plain src/test/resources/file_1.yml src/test/resources/file_2.yml
+	./build/install/app/bin/app -f stylish src/test/resources/file_1.yml src/test/resources/file_2.yml
 
 check:
 	./gradlew check
